--- a/HW3Part1/templates/artist_info.html
+++ b/HW3Part1/templates/artist_info.html
@@ -2,6 +2,7 @@
     {% for r in objects %}
         <li>
         <h2>Track Name: {{ r['trackName'] }}</h2>
-        <div>See it on iTunes <a href="{{ r['trackViewUrl'] }}">here</a>.</div></li>
+        <div>Click on the image to see it on iTunes!<br> <a href="{{ r['trackViewUrl'] }}"> <img src={{ r['artworkUrl100'] }} alt="Artwork" >
+</a></div></li>
     {% endfor %}
 </ul>
